; (library
;  (name libarchive)
;  (flags
;   (:standard -cclib -larchive))
;  (c_library_flags (-L/opt/homebrew/opt/libarchive/lib)))

(library
 (name archive_bindings)
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name libarchive)
  (build_flags_resolver pkg_config)
  (headers
   (include "archive.h" "archive_entry.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
